# sailpoint-session-manager

./: .gitignore  CONTRIBUTING.md  Dockerfile  QUICK_START.md  README.md  pyproject.toml
examples/: config.example.yml
sailpoint_session_manager/: __init__.py  cli.py  connectors.py  models.py  sailpoint_client.py
