[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sailpoint-session-manager"
version = "0.1.0"
description = "Multi-app session management and revocation tool for SailPoint"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Amit Gupta", email = "apphelp.csw@gmail.com"}
]
keywords = ["sailpoint", "session-management", "iam", "security", "identity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]

dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/xamitgupta/sailpoint-session-manager"
Documentation = "https://github.com/xamitgupta/sailpoint-session-manager#readme"
Repository = "https://github.com/xamitgupta/sailpoint-session-manager.git"
Issues = "https://github.com/xamitgupta/sailpoint-session-manager/issues"

[project.scripts]
session-manager = "sailpoint_session_manager.cli:main"

[tool.setuptools]
packages = ["sailpoint_session_manager"]

[tool.black]
line-length = 100
target-version = ['py38']
